# cloc

./: .gitignore  README.md
firmware/: Cargo.toml
firmware/src/: digit.rs  lib.rs  rtc.rs  tpic6b595.rs
kicad/: cloc.kicad_pro  cloc.kicad_sch
