[package]
name = "cloc"
version = "0.1.0"
edition = "2024"


[dependencies]
defmt = "1.0.1"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.6.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-time = { version = "0.4.0", features = [ "defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m-rt = "0.7.0"
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
embedded-hal = "1.0.0"
fixed = "1.25"

[profile.release]
debug = true
